--- a/UTM39N_WGS84.ipynb
+++ b/UTM39N_WGS84.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ecc4622ce3969cd73b178525e0e0869ce87dc9ded52af37dddcb1cc5c20bbda6"
+  "signature": "sha256:747034f105fb01f418bf862813ce8a8b5f019f7e7a02c8f667765e98aefba825"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -114,6 +114,7 @@
      "input": [
       "# centroid of MultiPoint (box in this case)\n",
       "utm39n_centroid = utm39n_mp.centroid\n",
+      "print utm39n_centroid\n",
       "print Point(zip(*utm39n(*utm39n_centroid.xy,inverse=True)))"
      ],
      "language": "python",
@@ -123,6 +124,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "POINT (615000 2935000)\n",
         "POINT (52.15429849530224 26.5309242663309)\n"
        ]
       }
@@ -220,7 +222,8 @@
       "a = Point(zip(*utm39n(*utm39n_centroid.xy,inverse=True)))\n",
       "b = wgs84_centroid\n",
       "print a\n",
-      "print b"
+      "print b\n",
+      "print a.distance(b)"
      ],
      "language": "python",
      "metadata": {},
@@ -230,11 +233,79 @@
        "stream": "stdout",
        "text": [
         "POINT (52.15429849530224 26.5309242663309)\n",
-        "POINT (52.15429849522287 26.53084351558166)\n"
+        "POINT (52.15429849522287 26.53084351558166)\n",
+        "8.07507492411e-05\n"
        ]
       }
      ],
      "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### distance between UTM 39 N unprojected center and center of 4 unprojected points"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utm39n_a = Point(zip(*utm39n(*a.xy)))\n",
+      "utm39n_b = Point(zip(*utm39n(*b.xy)))\n",
+      "print utm39n_a\n",
+      "print utm39n_b\n",
+      "print utm39n_a.distance(utm39n_b)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "POINT (615000.0000000175 2934999.999999994)\n",
+        "POINT (615000.0804933602 2934991.055605202)\n",
+        "8.94475697719\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### distance between UTM 39 N unprojected-projected center and untouched center (in meters)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print Point(615000,2935000).distance(utm39n_a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.84818260581e-08\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
     }
    ],
    "metadata": {}
