markdown and specified units

--- a/UTM39N_WGS84.ipynb
+++ b/UTM39N_WGS84.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:747034f105fb01f418bf862813ce8a8b5f019f7e7a02c8f667765e98aefba825"
+  "signature": "sha256:e834df66db1f9c694093ccccfd38918af4d04e4efe10c933bf5aabcc07ab6bc3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -215,6 +215,13 @@
      "prompt_number": 11
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### distance between UTM 39 N unprojected center and center of 4 unprojected points (in decimal degrees)"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -244,7 +251,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### distance between UTM 39 N unprojected center and center of 4 unprojected points"
+      "### distance between UTM 39 N unprojected center and center of 4 unprojected points (in meters)"
      ]
     },
     {
@@ -296,15 +303,6 @@
        ]
       }
      ],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 14
     }
    ],
